[tool.poetry]
name = "rune"
version = "0.0.1"
description = "The Valhalla of Python"
authors = ["impalah <impalah@gmail.com>"]
readme = "README.md"
packages = [{include = "rune", from = "src"}]
license = "MIT"
homepage = "https://impalah.github.io/rune/"
repository = "https://github.com/impalah/rune"
documentation = "https://impalah.github.io/rune/"
keywords = ["valhalla", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Documentation" = "https://impalah.github.io/rune/"
"Source" = "https://github.com/impalah/rune"
